--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -194,7 +194,8 @@ It is now accepted that turbulent transport at the edge is particularly suppress
 The shear stress dissociates smaller turbulent structures, with their energy and momenta transferred to larger flows.
 This flow shear can be modeled as a ratio of the electromagnetic fields given by \cite{staps_backstepping_2017}
 \begin{align} % Shear velocity
-	\frac{\partial V_{\mathbf{E}\times\mathbf{B}}}{\partial x} \,=\, \frac{\partial}{\partial x} \left(\frac{E_r}{B}\right) \,\approx\, \frac{1}{B_\phi} \frac{\partial E_r}{\partial x}~.
+	\frac{\partial V_{\mathbf{E}\times\mathbf{B}}}{\partial x} \,=\, \frac{\partial}{\partial x}
+			\left(\frac{E_r}{B}\right) \,\approx\, \frac{1}{B_\phi} \frac{\partial E_r}{\partial x}~.
 	\label{eq:velocity_shear}
 \end{align}
 Both zonal and mean $\mathbf{E}\times\mathbf{B}$ flows are responsible for the drift-wave turbulence.
@@ -206,8 +207,9 @@ The other possibility is that flow shear can increase the saturation mechanism, 
 Each are implemented as some parameter that multiplies against their respective term in Equation~\ref{eq:turbulence_ode}.
 For example, the nonlinear model would adjust it to the following
 \begin{align} % Nonlinear Turbulence ODE
-	\frac{\partial\mathcal{E}}{\partial t} \,=\, \gamma_L\mathcal{E} - \eta_\text{NL}\alpha_\text{sat}\mathcal{E}^2~, ~~~~
-	\eta_\text{NL} \,=\, 1 + \tilde{\eta} \left|\frac{\partial V_{\mathbf{E}\times\mathbf{B}}}{\partial x}\right|^2.
+	\frac{\partial\mathcal{E}}{\partial t} \,=\, \gamma_L\mathcal{E} -
+		\eta_\text{NL}\alpha_\text{sat}\mathcal{E}^2~, ~~~~ \eta_\text{NL} \,=\,
+		1 + \tilde{\eta} \left|\frac{\partial V_{\mathbf{E}\times\mathbf{B}}}{\partial x}\right|^2.
 	\label{eq:nonlinear_turbulence_ode}
 \end{align}
 Both forms were investigated by Weymiens, and the nonlinear model proved more robust to changes in plasma parameters \cite{weymiens_bifurcation_2014}.
@@ -217,8 +219,9 @@ In slab geometry, a radial electric field is proportional to $V_{\mathbf{E}\time
 The details of $Z$ are described in the following section \ref{ssec:E_r}.
 This changes the coefficient of the nonlinear turbulence model $\eta_\text{NL}$ into
 \begin{align} % New Saturation Coefficient
-	\eta_\text{NL} \,=\, 1 + \tilde{\eta} \left|\frac{\partial V_{\mathbf{E}\times\mathbf{B}}}{\partial x}\right|^2
-	\,=\, 1 + \eta\left|\frac{\partial Z}{\partial x}\right|^2~,
+	\eta_\text{NL} \,=\, 1 +
+		\tilde{\eta} \left|\frac{\partial V_{\mathbf{E}\times\mathbf{B}}}{\partial x}\right|^2
+		\,=\, 1 + \eta\left|\frac{\partial Z}{\partial x}\right|^2~,
 	\label{eq:saturation_normalization}
 \end{align}
 with $\eta$ including the normalization.
@@ -227,7 +230,7 @@ with $\eta$ including the normalization.
 To generate a poloidal $\mathbf{E}\times\mathbf{B}$ flow with a mainly toroidal $\mathbf{B}$, an electric field must be generated.
 A plethora of individual processes for the generation of such an electric field have been proposed, most of which can be viewed as separate contributions in a radial Poisson's law, with some that tend to reduce the field.
 The radial electric field $E_r$ can be deduced from the radial force balance in steady-state for any plasma species $j$, as follows:
-\begin{equation}
+\begin{equation} % Lorentz Force Balance
 	E_r \,=\, -\frac{1}{n_j e_j} \frac{\text{d} p_j}{\text{d} r} + V_{\theta j} B_\phi - V_{\phi j} B_\theta
 	\label{eq:E_r}
 \end{equation}
@@ -238,7 +241,8 @@ Experimentally, each term can be measured separately; however, determining these
 As alluded to in the previous section, a definition of the normalized radial electric field is needed.
 The definition used is
 \begin{align} % Z definition
-	Z \,\equiv\, \frac{\rho_\theta e E_r}{T}~, ~~~~ \rho_\theta \,\equiv\, \frac{m_i v_\text{th}}{e B_\theta}~,\label{eq:Z_and_rho_definitions}
+	Z \,\equiv\, \frac{\rho_\theta e E_r}{T}~, ~~~~
+		\rho_\theta \,\equiv\, \frac{m_i v_\text{th}}{e B_\theta}~,\label{eq:Z_and_rho_definitions}
 \end{align}
 with the ion mass $m_i$, the thermal ion velocity $v_\text{th}$, the elementary charge $e$, and the poloidal magnetic field $B_\theta$.
 
