--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -37,9 +37,14 @@
 \usepackage{hyperref}
 \hypersetup
 {
-	pdfauthor={\me}
-	pdftitle={\shortdoctitle}
-	pdfsubject={\doctitle}
+	bookmarks=true,%
+	colorlinks=false,%
+	linkbordercolor={0.980 0.500 0.449},%
+	citebordercolor={0.449 0.926 0.980},%
+	pdfauthor={\me},%
+	pdfcreator={\me},%
+	pdftitle={\shortdoctitle},%
+	pdfsubject={\doctitle},%
 	pdfkeywords={\keywords}
 }
 
