Tiny mod to location and date

--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -46,7 +46,8 @@ Supervisors:\\
 \vfill
 %\docdate \\
 \large
-Eindhoven, \monthYear\\
+Eindhoven, NL\\
+\today\\
 
 % Put the Paragraph Indent back to its original value
 \setlength{\parindent}{\backupparindent}
