--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -4,8 +4,8 @@
 \usepackage{thesis}
 
 %{{{ Alias commands specific to the thesis package
-\newcommand{\shortdoctitle}{$E_r$-Generating Terms}
-\newcommand{\doctitle}{Radial Electric Field-Generating Terms in L--H Transitions}
+\newcommand{\shortdoctitle}{$E\_r$-Generating Mechanisms}
+\newcommand{\doctitle}{Comparing Radial Electric Field-Generating Mechanisms in L--H Transitions}
 \newcommand{\docsubtitle}{Master's Thesis}
 
 \newcommand{\me}{Kevin A. Blondino}
@@ -18,7 +18,7 @@
 \newcommand{\thirdCommitteeMember}{Third Committee Member}
 %}}}
 
-\title{Radial Electric Field-Generating Terms in L--H Transitions}
+\title{\doctitle}
 \author{\me}
 
 \usepackage{fullpage, indentfirst, graphicx, amsmath, float}
