Added a couple refs for fluxes

--- a/References/References.bib
+++ b/References/References.bib
@@ -119,13 +119,16 @@
 @article{chankin_loss_1993,
 	title = {Loss ion orbits at the tokamak edge},
 	volume = {33},
+	issn = {0029-5515},
 	url = {http://stacks.iop.org/0029-5515/33/i=10/a=I05},
-	abstract = {In divertor tokamak plasmas with intense additional heating a large fraction of the power deposited at the target has been attributed to the collisionless losses of energetic ions from a region of about twice an ion poloidal Larmor radius inside the plasma boundary. These energetic ion losses can also strongly effect the formation of the radial electric field at the plasma edge, and may be responsible for the L to H transition. This paper presents the first systematic analysis of loss ion orbits at the tokamak edge. A particle following code has been developed to assess the detailed shape of the loss cone of escaping ions in velocity space, its transformation in the presence of a radial electric field, the shape of the loss orbits and the effect of the reversal of the toroidal magnetic field. The results obtained allow one to calculate the total amount of direct ion losses, which is expected to be substantially less than that estimated from the simplified assumptions used, because of the narrowness of the loss cone. The complex response of the ion loss cone to changes in radial electric field can potentially create a condition of instability (like the L to H transition) with rapid growth of the negative potential inside the plasma boundary. Numerical simulations have shown a relatively weak dependence of the energetic ion behaviour on the exact profile of the potential, suggesting that the resonant effects of the ion interaction with the magnetic field, expected from the theory of an idealized large aspect ratio tokamak (r/R{\textless}{\textless}1) and leading, for instance, to the effect of banana orbit squeezing, may not exist.},
+	doi = {10.1088/0029-5515/33/10/I05},
+	abstract = {In divertor tokamak plasmas with intense additional heating a large fraction of the power deposited at the target has been attributed to the collisionless losses of energetic ions from a region of about twice an ion poloidal Larmor radius inside the plasma boundary. These energetic ion losses can also strongly effect the formation of the radial electric field at the plasma edge, and may be responsible for the L to H transition. This paper presents the first systematic analysis of loss ion orbits at the tokamak edge. A particle following code has been developed to assess the detailed shape of the loss cone of escaping ions in velocity space, its transformation in the presence of a radial electric field, the shape of the loss orbits and the effect of the reversal of the toroidal magnetic field. The results obtained allow one to calculate the total amount of direct ion losses, which is expected to be substantially less than that estimated from the simplified assumptions used, because of the narrowness of the loss cone. The complex response of the ion loss cone to changes in radial electric field can potentially create a condition of instability (like the L to H transition) with rapid growth of the negative potential inside the plasma boundary. Numerical simulations have shown a relatively weak dependence of the energetic ion behaviour on the exact profile of the potential, suggesting that the resonant effects of the ion interaction with the magnetic field, expected from the theory of an idealized large aspect ratio tokamak (r/R{\textless}{\textless}1) and leading, for instance, to the effect of banana orbit squeezing, may not exist},
+	language = {en},
 	number = {10},
+	urldate = {2018-03-02},
 	journal = {Nuclear Fusion},
-	author = {Chankin, A.V. and McCracken, G.M.},
+	author = {Chankin, A. V. and McCracken, G. M.},
 	year = {1993},
-	keywords = {Ion orbit loss},
 	pages = {1459}
 }
 
@@ -558,6 +561,22 @@
 	pages = {725}
 }
 
+@article{sauter_l--_2012,
+	title = {L-- to {H}--mode transitions at low density in {ASDEX} {Upgrade}},
+	volume = {52},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/52/i=1/a=012001},
+	doi = {10.1088/0029-5515/52/1/012001},
+	abstract = {The results from ASDEX Upgrade discharges dedicated specifically to the investigation of low-density L-to-H transitions are presented. The plasmas were heated by electron cyclotron resonance heating to achieve a separation of electron and ion heat channels. Under such conditions, the ratio of electron to ion temperature at the plasma edge increases with decreasing density at the L--H transition and can be as high as 3.5. Our results strongly support the essential role of the ion channel in the L--H transition, via the diamagnetic E r provided by the ion pressure gradient.},
+	language = {en},
+	number = {1},
+	urldate = {2018-03-01},
+	journal = {Nuclear Fusion},
+	author = {Sauter, P. and Pütterich, T. and Ryter, F. and Viezzer, E. and Wolfrum, E. and Conway, G. D. and Fischer, R. and Kurzan, B. and {R.M. McDermott} and Rathgeber, S. K. and Team, the ASDEX Upgrade},
+	year = {2012},
+	pages = {012001}
+}
+
 @book{schnack_lectures_2009,
 	title = {Lectures in {Magnetohydrodynamics}},
 	isbn = {978-3-642-00687-6},
@@ -601,14 +620,18 @@
 @article{shaing_bifurcation_1990,
 	title = {Bifurcation of poloidal rotation and suppression of turbulent fluctuations: {A} model for the {L}--{H} transition in tokamaks},
 	volume = {2},
-	url = {aip.scitation.org/doi/pdf/10.1063/1.859473},
+	issn = {0899-8221},
+	shorttitle = {Bifurcation of poloidal rotation and suppression of turbulent fluctuations},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.859473},
 	doi = {10.1063/1.859473},
 	abstract = {The poloidal momentum balance equation in tokamaks is shown to have bifurcated solutions; the poloidal flow velocity U\_p can suddenly become more positive when the ion collisionality decreases. The corresponding radial electric field E\_r becomes more negative, suppresses turbulent fluctuations, and improves plasma confinement. A heuristic argument is employed to illustrated the effects of E\_r on turbulent fluctuations. A more negative value of E\_r and/or a more positive value of dE\_r/dr can suppress the fluctuation amplitudes, if dP/dr {\textless} 0 (with r the local minor radius and P the plasma pressure). The theory is employed to explain the L--H transition observed in tokamaks.},
 	number = {6},
+	urldate = {2018-03-02},
 	journal = {Physics of Fluids B: Plasma Physics},
-	author = {Shaing, K.C. and Crume, E.C. and Houlberg, W.A.},
+	author = {Shaing, K. C. and Crume, E. C. and Houlberg, W. A.},
+	month = jun,
 	year = {1990},
-	pages = {1492 -- 1498}
+	pages = {1492--1498}
 }
 
 @article{snipes_h_1996,
@@ -650,6 +673,22 @@
 	pages = {689}
 }
 
+@article{stringer_non-ambipolar_1995,
+	title = {Non-ambipolar neoclassical transport},
+	volume = {35},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/35/i=8/a=I10},
+	doi = {10.1088/0029-5515/35/8/I10},
+	abstract = {The usual demonstration that neoclassical transport is automatically ambipolar, and independent of the radial electric field (E r ), is shown to be valid only in an equilibrium axisymmetric plasma in which there is no other source or damping of toroidal momentum. If it were generally true, it would be difficult to explain the measured current drawn from a biased internal probe, as used to induce H modes. However, this current and its variation with applied voltage are consistent with the alternative analysis by Galeev and Sagdeev (1968), in which the ion and electron fluxes depend on E r - B θ \#\#IMG\#\# [http://ej.iop.org/icons/Entities/barU.gif] bar U {\textbar}{\textbar} . The behaviour of E r and impurity pump-out during enhanced MHD activity can also be explained using this analysis},
+	language = {en},
+	number = {8},
+	urldate = {2018-03-02},
+	journal = {Nuclear Fusion},
+	author = {Stringer, T. E.},
+	year = {1995},
+	pages = {1008}
+}
+
 @article{suttrop_identification_1997,
 	title = {Identification of plasma-edge-related operational regime boundaries and the effect of edge instability on confinement in {ASDEX} {Upgrade}},
 	volume = {39},
@@ -684,19 +723,6 @@
 @article{toda_theoretical_1997,
 	title = {A theoretical model of {H}-mode transition triggered by condensed neutrals near {X}-point},
 	volume = {39},
-	url = {http://stacks.iop.org/0741-3335/39/i=2/a=007},
-	abstract = {The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H-mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H-mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H-mode transition because of CX loss.},
-	number = {2},
-	journal = {Plasma Physics and Controlled Fusion},
-	author = {Toda, S. and Itoh, S.I. and Yagi, M. and Miura, Y.},
-	year = {1997},
-	keywords = {H-mode},
-	pages = {301}
-}
-
-@article{toda_theoretical_1997-1,
-	title = {A theoretical model of {H}-mode transition triggered by condensed neutrals near {X}-point},
-	volume = {39},
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/39/i=2/a=007},
 	doi = {10.1088/0741-3335/39/2/007},
@@ -727,6 +753,7 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	keywords = {Bifurcation, L-H transition, Large-scale systems, MATLAB, Numerical continuation},
 	pages = {13--26}
 }
+
 @article{viezzer_evidence_2014,
 	title = {Evidence for the neoclassical nature of the radial electric field in the edge transport barrier of {ASDEX} {Upgrade}},
 	volume = {54},
