--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -1,6 +1,6 @@
 In 1982, a new neutral-beam injection heating system was install in the ASDEX tokamak, which pushed the device into a new realm.
 A new level of energy confinement time was achieved, measured to be a factor of 2 or more than what was expected.
-This state of operation was coined the high-confinement (H--) mode, and is now considered necessary for the future of nuclear fusion as an energy source \cite{arnoux_how_2009} \cite{wagner_development_1984}.
+This state of operation was coined the high-confinement (H--) mode, and is now considered necessary for the future of nuclear fusion as an energy source \cite{arnoux_how_2009, wagner_development_1984}.
 With this new level of energy confinement, the community got one step closer to economic fusion power plants.
 The details of this transition, however, are not fully understood.
 
@@ -103,7 +103,7 @@ As $b$ approaches zero from some positive value, the size of the hysteresis shri
 %}}}
 
 \subsubsection{Oscillatory Transition Bifurcation}
-The third type of transition dynamics in tokamak plasmas is oscillatory, in which the system rapidly oscillates between the two different modes \cite{ryter_survey_2013} \cite{zohm_mhd_1995}.
+The third type of transition dynamics in tokamak plasmas is oscillatory, in which the system rapidly oscillates between the two different modes \cite{ryter_survey_2013, zohm_mhd_1995}.
 This phenomenon is referred to by various names, including dithering, I--mode, predator--prey oscillations, and limit cycle oscillations.
 It is the most enigmatic of the three discussed, as the least is known about it, and requires a more-complex model than Eq.~\ref{eq:sharp_bif}.
 
