Moved titles to respective files

--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -1,3 +1,4 @@
+\chapter{Introduction}\label{chapter:introduction}
 In 1982, a new neutral-beam injection heating system was install in the ASDEX tokamak, which pushed the device into a new realm.
 A new level of energy confinement time was achieved, measured to be a factor of 2 or more than what was expected.
 This state of operation was coined the high-confinement (H--) mode, and is now considered necessary for the future of nuclear fusion as an energy source \cite{arnoux_how_2009, wagner_development_1984}.
