Proper Appendix name

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -138,7 +138,7 @@
 
 \begin{appendices}
 \chapter{Code}
-\input{Appendices/AppendixB.tex}
+\input{Appendices/Code.tex}
 \end{appendices}
 
 \printbibliography
