--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -12,9 +12,12 @@
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provides euro and other symbols
 \else % if luatex or xelatex
-  \usepackage{unicode-math}
+  \ifxetex
+    \usepackage{mathspec}
+  \else
+    \usepackage{fontspec}
+  \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
@@ -24,17 +27,18 @@
 \usepackage[]{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
+\PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
+\usepackage[unicode=true]{hyperref}
+\hypersetup{
+            pdfborder={0 0 0},
+            breaklinks=true}
+\urlstyle{same}  % don't use monospace font for urls
 \IfFileExists{parskip.sty}{%
 \usepackage{parskip}
 }{% else
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 }
-\usepackage{hyperref}
-\hypersetup{
-            pdfborder={0 0 0},
-            breaklinks=true}
-\urlstyle{same}  % don't use monospace font for urls
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -59,43 +63,69 @@
 
 \begin{document}
 
-\hypertarget{full-model-notes-26-feb-2018}{%
-\section{Full Model Notes: 26 Feb
-2018}\label{full-model-notes-26-feb-2018}}
+\section{Full Model Notes: 14 Mar
+2018}\label{full-model-notes-14-mar-2018}
 
-\small\begin{align}
-    \text{Co-dimension 2 cusp bifurcation:} ~~~~ \dot{x} \,&=\, a + bx - x^3 \\
-    \text{FitzHugh-Nagumo bifurcation:} ~~~~ \dot{x} \,&=\, a - bx - x^3 + cy~, ~~~~ \dot{y} \,=\, -x - y
-\end{align}\normalsize
+\small
 
-\hypertarget{model-forms}{%
-\subsubsection{Model Forms}\label{model-forms}}
+\begin{align}
+    &\text{Co-dimension 2 cusp bifurcation:} ~~~~ \dot{x} \,=\, a + bx - x^3 \\
+    &\text{FitzHugh-Nagumo bifurcation:} ~~~~ \dot{x} \,=\, a - bx - x^3 + cy~,
+        ~~~~ \dot{y} \,=\, -x - y \\
+    &\text{Plasma Dispersion Function:} ~~ X(\zeta) \,=\, i \sqrt{\pi} w(\zeta)
+        \,=\, i \sqrt{\pi} \, e^{-\zeta^2} \text{erfc}(-i \zeta)
+        \,=\, \frac{1}{\sqrt{\pi}} \int_{-\infty}^{+\infty} \frac{e^{-t^2}}{t - \zeta} \, \text{d}t~,
+        ~~ \zeta \,\equiv\, \frac{\omega/k}{v_T}
+\end{align}
 
-Domain with boundary: \small\begin{align}
+\normalsize
+
+\subsubsection{Model Forms}\label{model-forms}
+
+Domain with boundary: \small
+
+\begin{align}
     \Omega \,=\, \left\{x, t \,\in\, \mathbb{R}^2 \,|\, (0 \leq x \leq L) ~\text{and}~ (t \geq 0)\right\}, ~~~~ \delta\Omega \,=\, \{x, t \,\in\, \Omega \,|\, x = 0 ~\text{and}~ x = L \}
-\end{align}\normalsize
+\end{align}
+
+\normalsize
 
 Electric field normalization, energy definition, diffusivity relation,
-dielectric constant, and viscosity: \small\begin{align}
+dielectric constant, and viscosity: \small
+
+\begin{align}
     Z \,\equiv\, \frac{\rho_\theta \, e \, E_r}{T}~, ~~~~ U \,=\, \frac{n\,T}{\gamma - 1}~, ~~~~ \chi \,=\, \frac{D}{\zeta(\gamma - 1)}~, ~~~~ \epsilon \,=\, \frac{B_\theta^2}{B^2 \nu_i}~, ~~~~ \mu \sim \rho_\theta^2
-\end{align}\normalsize
+\end{align}
+
+\normalsize
 
 The following form of the model references particle and heat fluxes,
-\(\Gamma\) and \(q\): \small\begin{align}
-    \frac{\partial n}{\partial t} \,&=\, -\frac{\partial \Gamma}{\partial x}~, &\Gamma \,&=\, -D \, \frac{\partial n}{\partial x} \\
-    \frac{\partial U}{\partial t} \,&=\, -\frac{\partial q}{\partial x}~, &q \,&=\, -\chi \, n \frac{\partial T}{\partial x} + \frac{\Gamma\,T}{\gamma - 1} \\
-    \epsilon \frac{\partial Z}{\partial t} \,&=\, \mu \frac{\partial^2 Z}{\partial x^2} + \frac{c_n \, T}{n^2} \frac{\partial n}{\partial x} + \frac{c_T}{n} \frac{\partial T}{\partial x} + G(Z)~, &G \,&=\, a + b(Z - Z_S) + c(Z - Z_S)^3
-\end{align}\normalsize
+\(\Gamma\) and \(q\): \small
 
-Reducing it down to equations of only \(n\), \(T\) (of 2 possible
-forms), \(Z\), and numerical parameters gives \small\begin{align}
+\begin{align}
+    \frac{\partial n}{\partial t} \,&=\, -\frac{\partial \Gamma}{\partial x}~,~~&
+    \frac{\partial U}{\partial t} \,&=\, -\frac{\partial q}{\partial x}~,~~&
+    \epsilon \frac{\partial Z}{\partial t} \,&=\, \mu \frac{\partial^2 Z}{\partial x^2} + \frac{c_n \, T}{n^2} \frac{\partial n}{\partial x} + \frac{c_T}{n} \frac{\partial T}{\partial x} + G(Z) \\
+    \Gamma \,&=\, -D \, \frac{\partial n}{\partial x}~,~~&
+    q \,&=\, -\chi \, n \frac{\partial T}{\partial x} + \frac{\Gamma\,T}{\gamma - 1}~,~~&
+    &G \,=\, a + b(Z - Z_S) + c(Z - Z_S)^3
+\end{align}
+
+\normalsize
+
+Reducing the equations down to equations of only \(n\) and \(T\) (of 2
+possible forms): \small
+
+\begin{align}
     \dfrac{\partial n}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[D \, \dfrac{\partial n}{\partial x}\right] \\
-    \dfrac{\partial(n\,T)}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\dfrac{D\,n}{\zeta} \, \dfrac{\partial T}{\partial x}\right] \,+\, \dfrac{\partial}{\partial x}\left[D\,T \, \dfrac{\partial n}{\partial x}\right]~, ~~~~ \dfrac{\partial T}{\partial t} \,=\, \frac{\partial }{\partial x}\left[\frac{D}{\zeta} \, \frac{\partial T}{\partial x}\right] \,+\, \left(\frac{1}{\zeta} + 1\right) \frac{D}{n} \, \frac{\partial n}{\partial x} \, \frac{\partial T}{\partial x} \\
-    \epsilon \, \dfrac{\partial Z}{\partial t} \,&=\, \mu \, \dfrac{\partial^2 Z}{\partial x^2} \,+\, \dfrac{c_n T}{n^2} \, \dfrac{\partial n}{\partial x} \,+\, \dfrac{c_T}{n} \, \dfrac{\partial T}{\partial x} \,+\, G(Z)
-\end{align}\normalsize
+    \dfrac{\partial(n\,T)}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\dfrac{D\,n}{\zeta} \, \dfrac{\partial T}{\partial x}\right] \,+\, \dfrac{\partial}{\partial x}\left[D\,T \, \dfrac{\partial n}{\partial x}\right]~, ~~~~ \dfrac{\partial T}{\partial t} \,=\, \frac{\partial }{\partial x}\left[\frac{D}{\zeta} \, \frac{\partial T}{\partial x}\right] \,+\, \left(\frac{1}{\zeta} + 1\right) \frac{D}{n} \, \frac{\partial n}{\partial x} \, \frac{\partial T}{\partial x}
+\end{align}
 
-Staps reduced the model to the following vector form:
-\small\begin{align}
+\normalsize
+
+Staps reduced the model to the following vector form: \small
+
+\begin{align}
     \dfrac{\partial}{\partial t} \mathbf{v}(x,t) \,=\, \dfrac{\partial}{\partial x} F&\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,+\, S\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \\
 \mathbf{v} \,=\,\begin{bmatrix} n \\[1ex] T \\[1ex] Z \end{bmatrix}~,~~~~
 \mathbf{F} \,=\, &\begin{bmatrix}
@@ -108,30 +138,49 @@ Staps reduced the model to the following vector form:
             \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \, n^\prime \, T^\prime \\[2ex]
             \dfrac{c_n T}{\epsilon n^2} \, n^\prime \,+\, \dfrac{c_T}{\epsilon n} \, T^\prime \,+\, \dfrac{G(Z)}{\epsilon}
             \end{bmatrix}~.
-\end{align}\normalsize
+\end{align}
+
+\normalsize
 
 The diffusivity function \(D(\mathcal{E})\) is given in a few forms:
-\small\begin{align}
+\small
+
+\begin{align}
     D(Z) \,&=\, \dfrac{D_\text{max} + D_\text{min}}{2} + \dfrac{(D_\text{max} - D_\text{min})\tanh(Z)}{2} ~~~~~~ &\text{Zohm} \\
     D(Z^\prime) \,&=\, D_\text{min} \,+\, \dfrac{D_\text{max} - D_\text{min}}{1 + \alpha_\text{sup}(Z^\prime)^2} ~~~~~~ &\text{Staps} \\
     D(Z, Z^\prime) \,&=\, D_\text{min} + \dfrac{D_\text{max} - D_\text{min}}{1 + a_1\,Z^2 + a_2\,Z Z^\prime + a_3\left(Z^\prime\right)^2} ~~~~~~ &\text{Flow-Shear}
-\end{align}\normalsize
+\end{align}
 
-\hypertarget{boundary-conditions-initial-conditions-and-steady-state-solutions}{%
+\normalsize
+
 \subsubsection{Boundary Conditions, Initial Conditions, and Steady-State
-Solutions}\label{boundary-conditions-initial-conditions-and-steady-state-solutions}}
+Solutions}\label{boundary-conditions-initial-conditions-and-steady-state-solutions}
 
 Generalized versions for boundary conditions at the plasma edge
-(\(x=0\)): \small\begin{align}
-    \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~, ~~~~\frac{\partial T}{\partial x} \,=\, \frac{T}{\lambda_T}~, ~~~~\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}~,
-\end{align}\normalsize
+(\(x=0\)): \small
 
-\ldots{}towards the core (\(x=L\)): \small\begin{align}
-    \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~, ~~~~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~, ~~~~\frac{\partial Z}{\partial x} \,=\, 0
-\end{align}\normalsize
+\begin{align}
+    \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~,
+        ~~~~\frac{\partial T}{\partial x} \,=\, \frac{T}{\lambda_T}~,
+        ~~~~\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}~;
+\end{align}
+
+\normalsize
+
+\ldots{}towards the core (\(x=L\)): \small
+
+\begin{align}
+    \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~,
+        ~~~~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~,
+        ~~~~\frac{\partial Z}{\partial x} \,=\, 0
+\end{align}
+
+\normalsize
 
 For Matlab, the Neumann and Robin boundary conditions can be expressed
-in the form of \small\begin{align}
+in the form of \small
+
+\begin{align}
     &p\left(x, t, \mathbf{v}\right) \,+\, F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,=\, 0 ~~~ \text{for} ~~~ (x, t) \in \delta\Omega \\
 &p(0, t) \,=\, -\begin{bmatrix}
                 D \, \dfrac{n}{\lambda_n}\\[2ex]
@@ -144,54 +193,89 @@ p(L, t) \,=\, \begin{bmatrix}
                 \dfrac{(\gamma - 1) q_c - T\Gamma_c(t)}{n} \\[2ex]
                 0
                 \end{bmatrix}_{x=L}~.
-\end{align}\normalsize
+\end{align}
+
+\normalsize
 
 Paquay's initial conditions for density and temperature, and Stap's
-initial condition for \(Z\): \small\begin{align}
-    n(x,0) \,&=\, -\dfrac{\Gamma_\infty \lambda_n}{D} \, \left(1 + \frac{x}{\lambda_n}\right)~, ~~~~ T(x,0) \,=\, q_\infty \, \dfrac{\gamma - 1}{\Gamma_\infty} \, \left[1 - \frac{\lambda_n}{\zeta \lambda_T + \lambda_n} \, \left(1 + \frac{x}{\lambda_n}\right)^{-\zeta}\right]~, \\
+initial condition for \(Z\): \small
+
+\begin{align}
+    n(x,0) \,&=\, -\dfrac{\Gamma_\infty \lambda_n}{D} \, \left(1 + \frac{x}{\lambda_n}\right)~,
+        ~~~~ T(x,0) \,=\, q_\infty \, \dfrac{\gamma - 1}{\Gamma_\infty} \, \left[1 - \frac{\lambda_n}{\zeta \lambda_T + \lambda_n} \, \left(1 + \frac{x}{\lambda_n}\right)^{-\zeta}\right]~, \\
     Z(x,0) \,&=\, Z_S\left[1 - \tanh\left(\dfrac{L\,x - L}{2}\right)\right] \,=\, Z_S\left[1 - \frac{\exp(L\,x - L) - 1}{\exp(L\,x - L) + 1}\right]~.
-\end{align}\normalsize
+\end{align}
 
-Steady-State Solutions \small\begin{align}
-    &\bar{n}(x) \,=\, \bar{n}(0) - \int_0^x \frac{\Gamma_c}{D(\bar{Z}(x))}~\text{d}x, ~~ \bar{T}(x) \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c} \left(1 - \lambda_g\left(\frac{\bar{n}(x)}{\bar{n}(0)}\right)^{-\zeta}\right) \\
-    &\bar{n}(0) \,=\, -\frac{\Gamma_c \lambda_n}{D(\bar{Z}(0))}, ~~ \lambda_g \,=\, \frac{\frac{\lambda_n}{\zeta \lambda_T}}{1 + \frac{\lambda_n}{\zeta \lambda_T}}, ~~ c_g \,=\, \frac{\zeta c_T - c_n}{1 + \zeta \frac{\lambda_T}{\lambda_n}}~, ~~ G(\bar{Z}(x)) \,=\, \theta\,D(\bar{Z}(x)) \\
+\normalsize
+
+Steady-State Solutions \small
+
+\begin{align}
+    &\bar{n}(x) \,=\, \bar{n}(0) - \int_0^x \frac{\Gamma_c}{D(\bar{Z}(x))}~\text{d}x~,
+        ~~ \bar{T}(x) \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c} \left(1 - \lambda_g\left(\frac{\bar{n}(x)}{\bar{n}(0)}\right)^{-\zeta}\right) \\
+    &\bar{n}(0) \,=\, -\frac{\Gamma_c \lambda_n}{D(\bar{Z}(0))},
+        ~~ \lambda_g \,=\, \frac{\frac{\lambda_n}{\zeta \lambda_T}}{1 + \frac{\lambda_n}{\zeta \lambda_T}}~,
+        ~~ c_g \,=\, \frac{\zeta c_T - c_n}{1 + \zeta \frac{\lambda_T}{\lambda_n}}~, ~~ G(\bar{Z}(x)) \,=\, \theta\,D(\bar{Z}(x)) \\
     \text{Staps':}& ~ \theta \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c^2 \lambda_n^2} (c_n + c_g), ~~ \text{Paquay's:} ~ \theta \,=\, \frac{\Gamma_c^2 \lambda_n^2}{q_c \zeta (\gamma - 1)} \, \frac{\lambda_n + \zeta\lambda_T}{c_n\lambda_T + c_T\lambda_n} \,=\, \frac{1}{\text{Staps}} \,=\, \text{Weymiens}
-\end{align}\normalsize
+\end{align}
 
-\hypertarget{gradient-model-from-staps}{%
-\subsubsection{Gradient Model, from
-Staps}\label{gradient-model-from-staps}}
+\normalsize
 
-\small\begin{align}
-    \nonumber&\dfrac{m_i}{e \rho_{\theta i}} \,n T\, \left(\dfrac{B_\theta}{B}\right)^2 \dfrac{\partial Z}{\partial t} \,=\, \dfrac{m_i \mu_i}{e \rho_{\theta i}} \,n T\, \dfrac{\partial^2 Z}{\partial x^2} \\
-    &+\, B_\theta^2 \left[\left(g_n^\text{an} - g_n^\text{cx} - g_n^{\pi\parallel}\right) \dfrac{n^\prime}{n} + \left(g_T^\text{an} - g_T^\text{cx} - g_T^{\pi\parallel}\right) \dfrac{T^\prime}{T} + \left(g_Z^\text{an} - g_Z^\text{cx} - g_Z^{\pi\parallel}\right) Z - f^\text{OL}\right] \\
-    &\dfrac{m_i n T}{e^2 \rho_{\theta i} B^2} \frac{\partial Z}{\partial t} \,=\, \dfrac{m_i \mu}{e^2 \rho_{\theta i} B_\theta^2} \frac{\partial^2 Z}{\partial x^2} + \Gamma_e^\text{an} - \Gamma_i^{\pi\parallel} - \Gamma_i^\text{cx} - \Gamma_i^\text{OL}
-\end{align}\normalsize
+\subsubsection{Gradient Model}\label{gradient-model}
 
-\begin{itemize}
-\item
-  Electron Anomalous Diffusion: \small\begin{align}
-    D^\text{an} \,&=\, \dfrac{\epsilon^2 \sqrt{\pi}}{2 a_m} \dfrac{\rho_{\theta e} T}{B}~,~~ g_n^\text{an} \,=\, -e \,n\, D^\text{an}~,~~ g_T^\text{an} \,=\, -e \,n\, \alpha^\text{an}\, D^\text{an}~,~~ g_Z^\text{an} \,=\, \dfrac{-e \,n\, D^\text{an}}{\rho_{\theta i}}
-  \end{align}\normalsize
-\item
-  Charge Exchange Friction: \small\begin{align}
-    g_n^\text{cx} \,=\, -\dfrac{m_i \,n_0 \langle\sigma v\rangle_\text{cx} \,n T}{B_\theta^2} \left[\frac{B_\theta^2}{\epsilon^2 B_\phi^2} + 2\right]~,~~~~ g_T^\text{cx} \,=\, \alpha^\text{cx}\,g_n^\text{cx}~,~~~~ g_Z^\text{cx} \,=\, -\dfrac{g_n^\text{cx}}{\rho_{\theta i}}
-  \end{align}\normalsize
-\item
-  Ion Bulk Viscosity:
-  \(N \,=\, \dfrac{\nu_{*i}\,\epsilon^{3/2}\,\nu_{ei}}{\nu_{ii}} ~~~\text{and}~~~ \eta \,=\, \dfrac{\epsilon^2 \sqrt{\pi}}{8 a_m} m_i \,n\, (v_{T_i})^2\)
-  \small\begin{align}
-    \begin{bmatrix}\xi_\theta \\[1ex] \xi_\phi \end{bmatrix} \,&=\, \dfrac{1}{\pi} \int_0^{\sqrt{\nu_{*i}}} \begin{bmatrix} 1 \\[1ex] \frac{5}{2} - x \end{bmatrix} x^2 \exp(-x) \, \tan^{-1}\left(\dfrac{2 N \sqrt{x}}{N^2 + Z^2 - x}\right) \text{d}x \\
-    g_n^{\pi\parallel} \,=\, \eta \, \rho_{\theta i}& B_\theta \, \xi_\theta~,~~~~ g_n^{\pi\parallel} \,=\, \eta \, \rho_{\theta i} \left(B_\theta\,\xi_\theta - B\,\xi_\phi\right)~,~~~~ g_Z^{\pi\parallel} \,=\, 2\eta \, B_\theta \, \xi_\theta
-  \end{align}\normalsize
-\end{itemize}
+\small
+
+\begin{align}
+    \nonumber&\dfrac{m_i n T}{e \rho_{\theta i} B^2} \, \dfrac{\partial Z}{\partial t}
+        \,=\, \dfrac{m_i \mu_i n T}{e \rho_{\theta i} B_\theta^2} \, \dfrac{\partial^2 Z}{\partial x^2} \\
+    &+\, \left(g_n^\text{an} - g_n^\text{cx} - g_n^{\pi\parallel}\right) \dfrac{n^\prime}{n}
+        + \left(g_T^\text{an} - g_T^\text{cx} - g_T^{\pi\parallel}\right) \dfrac{T^\prime}{T}
+        + \left(g_Z^\text{an} - g_Z^\text{cx} - g_Z^{\pi\parallel}\right) Z - e\Gamma^\text{OL} \\
+    &\dfrac{m_i n T}{e^2 \rho_{\theta i} B^2} \frac{\partial Z}{\partial t}
+        \,=\, \dfrac{m_i \mu}{e^2 \rho_{\theta i} B_\theta^2} \frac{\partial^2 Z}{\partial x^2}
+        \,+\, \Gamma_e^\text{an} \,-\, \Gamma_i^{\pi\parallel} \,-\, \Gamma_i^\text{cx} \,-\, \Gamma_i^\text{OL}
+\end{align}
+
+\normalsize
 
 \begin{itemize}
 \tightlist
 \item
-  Ion Orbit Loss: \small\begin{align}
-    g^\text{OL} \,=\, e \,n\, \nu_\text{eff} \sqrt{\epsilon} \,\rho_{\theta i}~,~~~~ f^\text{OL} \,=\, \dfrac{g^\text{OL}\,\exp\left[-\sqrt{\nu_{*i} + Z^4}\right]}{\sqrt{\nu_{*i} + Z^4}}
-  \end{align}\normalsize
+  Electron Anomalous Diffusion: \small
+
+  \begin{align}
+  D^\text{an} \,&=\, \dfrac{\epsilon^2 \sqrt{\pi}}{2 a_m} \dfrac{\rho_{\theta e} T}{B}~,~~ g_n^\text{an} \,=\, -e \,n\, D^\text{an}~,~~ g_T^\text{an} \,=\, -e \,n\, \alpha^\text{an}\, D^\text{an}~,~~ g_Z^\text{an} \,=\, \dfrac{-e \,n\, D^\text{an}}{\rho_{\theta i}}
+  \end{align}
+
+  \normalsize
+\item
+  Charge Exchange Friction: \small
+
+  \begin{align}
+  g_n^\text{cx} \,=\, -\dfrac{m_i \,n_0 \langle\sigma v\rangle_\text{cx} \,n T}{B_\theta^2} \left[\frac{B_\theta^2}{\epsilon^2 B_\phi^2} + 2\right]~,~~~~ g_T^\text{cx} \,=\, \alpha^\text{cx}\,g_n^\text{cx}~,~~~~ g_Z^\text{cx} \,=\, -\dfrac{g_n^\text{cx}}{\rho_{\theta i}}
+  \end{align}
+
+  \normalsize
+\item
+  Ion Bulk Viscosity:
+  \(N \,=\, \dfrac{\nu_{*i}\,\epsilon^{3/2}\,\nu_{ei}}{\nu_{ii}} ~~~\text{and}~~~ \eta \,=\, \dfrac{\epsilon^2 \sqrt{\pi}}{8 a_m} m_i \,n\, (v_{T_i})^2\)
+  \small
+
+  \begin{align}
+  \begin{bmatrix}\xi_\theta \\[1ex] \xi_\phi \end{bmatrix} \,&=\, \dfrac{1}{\pi} \int_0^{\sqrt{\nu_{*i}}} \begin{bmatrix} 1 \\[1ex] \frac{5}{2} - x \end{bmatrix} x^2 \exp(-x) \, \tan^{-1}\left(\dfrac{2 N \sqrt{x}}{N^2 + Z^2 - x}\right) \text{d}x \\
+  g_n^{\pi\parallel} \,=\, \eta \, \rho_{\theta i}& B_\theta \, \xi_\theta~,~~~~ g_n^{\pi\parallel} \,=\, \eta \, \rho_{\theta i} \left(B_\theta\,\xi_\theta - B\,\xi_\phi\right)~,~~~~ g_Z^{\pi\parallel} \,=\, 2\eta \, B_\theta \, \xi_\theta \\
+  e \Gamma_i^{\pi\parallel} \,&=\, -\frac{e n_e D_p}{\rho_i} (-\lambda - Z) \, \text{Im}\left[X\left(Z + \frac{i \nu_{ii}}{\omega_t}\right)\right]
+  \end{align}
+
+  \normalsize
+\item
+  Ion Orbit Loss: \small
+
+  \begin{align}
+  g^\text{OL} \,=\, e \,n\, \nu_\text{eff} \sqrt{\epsilon} \,\rho_{\theta i}~,~~~~ e\Gamma_i^\text{OL} \,=\, \dfrac{g^\text{OL}\,\exp\left[-\sqrt{\nu_{*i} + Z^4}\right]}{\sqrt{\nu_{*i} + Z^4}}
+  \end{align}
+
+  \normalsize
 \end{itemize}
 
 \end{document}
