Fixed missing terms in Eq 25, rm Z boundary cond

--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -63,8 +63,8 @@
 
 \begin{document}
 
-\section{Full Model Notes: 14 Mar
-2018}\label{full-model-notes-14-mar-2018}
+\section{Full Model Notes: 26 Mar
+2018}\label{full-model-notes-26-mar-2018}
 
 \small
 
@@ -166,7 +166,7 @@ Generalized versions for boundary conditions at the plasma edge
 \begin{align}
     \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~,
         ~~~~\frac{\partial T}{\partial x} \,=\, \frac{T}{\lambda_T}~,
-        ~~~~\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}~;
+        ~~~~\left(\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}\right)~;
 \end{align}
 
 \normalsize
@@ -236,7 +236,7 @@ Steady-State Solutions \small
         + \left(g_T^\text{an} - g_T^\text{cx} - g_T^{\pi\parallel}\right) \dfrac{T^\prime}{T}
         + \left(g_Z^\text{an} - g_Z^\text{cx} - g_Z^{\pi\parallel}\right) Z - e\Gamma^\text{OL} \\
     &\dfrac{m_i n T}{e^2 \rho_{\theta i} B^2} \frac{\partial Z}{\partial t}
-        \,=\, \dfrac{m_i \mu}{e^2 \rho_{\theta i} B_\theta^2} \frac{\partial^2 Z}{\partial x^2}
+        \,=\, \dfrac{m_i \mu n T}{e^2 \rho_{\theta i} B_\theta^2} \frac{\partial^2 Z}{\partial x^2}
         \,+\, \Gamma_e^\text{an} \,-\, \Gamma_i^{\pi\parallel} \,-\, \Gamma_i^\text{cx} \,-\, \Gamma_i^\text{OL}
 \end{align}
 
