Removed boundary core for Z

--- a/Thesis/Model/Model.tex
+++ b/Thesis/Model/Model.tex
@@ -68,7 +68,6 @@ Paquay rewrote the equation as
 		\frac{c_T}{n} \, \frac{\partial T}{\partial x} \,+\, G(Z)~,\label{eq:paquay_Z} \\
 	G(Z) \,\equiv\, a + bZ + cZ^3 \label{eq:G_polynomial}
 \end{align}
-\todo{\color{red}Expand here}
 
 \section{Forms of Diffusivities}\label{sec:diffusivities}
 Various forms of $D$ (and subsequently $\chi$) are presented in investigations with this model.
@@ -106,9 +105,8 @@ It is assumed that the SOL is passive to particle and heat fluxes, and therefore
 		\frac{\partial T}{\partial x}\biggr \lvert_{x=0} \,=\, \frac{T}{\lambda_T}~.\label{eq:nT_SOL_boundary}
 \end{align}
 The core side has a constant influx of particles and heat, stemming from fueling and heating.
-The electric field is to have no gradient beyond the plasma edge.
 \begin{align} % Fluxes from core
-	\Gamma(L) \,=\, \Gamma_c~, ~~~~ q(L) \,=\, q_c~,\label{eq:core_fluxes} \\
-	\frac{\partial Z}{\partial x}\biggr \lvert_{x=L} \,=\, 0 \label{eq:core_Z_cond}
+	\Gamma(L) \,=\, \Gamma_c~, ~~~~ q(L) \,=\, q_c~,\label{eq:core_fluxes}
 \end{align}
+There are hypothesized boundary conditions for the electric field at the core, but are not confirmed in any way.
 
