--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -63,8 +63,8 @@
 
 \begin{document}
 
-\section{Full Model Notes: 26 Mar
-2018}\label{full-model-notes-26-mar-2018}
+\section{Full Model Notes: 8 Apr
+2018}\label{full-model-notes-8-apr-2018}
 
 \small
 
@@ -79,6 +79,27 @@
     &\text{Approx. SI Units at Edge:} ~~~~ n \,\approx\, 0.5\times 10^{19}~\text{m}^{-3}~,
         ~~ T \,\approx\, 500~e\text{V}~,~~ v_T \,\approx\, 10^5~\text{m}/\text{s}~,
         ~~ \rho_{\theta i} \,\approx\, 10^{-4}~\text{m}
+\end{align}
+
+\normalsize
+
+\subsubsection{Plasma Parameters}\label{plasma-parameters}
+
+\small
+
+\begin{align}
+    v_{T_j} \,&=\, \sqrt{\frac{2 \, T}{m_j}}~,~~~
+        \rho_{\theta j} \,=\, \frac{m_j \, v_{T_j}}{e \, B_\theta}~,~~~
+        \omega_t \,=\, \frac{v_{Ti}}{q\,R}~,~~~
+        \omega_{bj} \,=\, \frac{\epsilon^{3/2} \, v_{T_j}}{q \, R}~,~~~
+        w_{bi} \,=\, \sqrt{\epsilon} \rho_{\theta i} \\
+    \nu_{ei} \,&=\, 1.33\times 10^5 \frac{n_{20}}{(T_\text{keV})^{3/2}}
+        \,=\, 4.2058\times 10^{-5} \frac{n}{(T_\text{eV})^{3/2}}~,~~~
+        \nu_{ii} \,=\, 1.2\, \nu_{ei} \, \sqrt{\frac{m_e}{m_i}}~,~~~
+        \nu_{*j} \,=\, \frac{\nu_{ji}}{\omega_{bj}} \\
+    \text{Non-formal:}& ~~ n_0 \,=\, \frac{n_0(0)}{\left(1 + \exp\left[k(x - d)\right]\right)}~,~~~
+        n_0(0) \,=\, \frac{\theta \, \Gamma_c}{v_{T_i}} ~~ \text{for} ~~ 0 < \theta \leq 1~,~~~
+        \langle \sigma v \rangle_{cx} \,=\, ?~~ \langle \sigma v \rangle_{ion} \,=\, ?
 \end{align}
 
 \normalsize
@@ -127,25 +148,6 @@ forms):
 
 \normalsize
 
-Staps reduced the model to the following vector form: \small
-
-\begin{align}
-    \dfrac{\partial}{\partial t} \mathbf{v}(x,t) \,=\, \dfrac{\partial}{\partial x} F&\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,+\, S\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \\
-\mathbf{v} \,=\,\begin{bmatrix} n \\[1ex] T \\[1ex] Z \end{bmatrix}~,~~~~
-\mathbf{F} \,=\, &\begin{bmatrix}
-            D\,\, n^\prime \\[1ex]
-            \dfrac{D}{\zeta}\,\, T^\prime \\[2ex]
-            \dfrac{\mu D}{\epsilon}\,\, Z^\prime
-            \end{bmatrix}~,~~~~
-\mathbf{S} \,=\, \begin{bmatrix}
-            0 \\[1ex]
-            \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \, n^\prime \, T^\prime \\[2ex]
-            \dfrac{c_n T}{\epsilon n^2} \, n^\prime \,+\, \dfrac{c_T}{\epsilon n} \, T^\prime \,+\, \dfrac{G(Z)}{\epsilon}
-            \end{bmatrix}~.
-\end{align}
-
-\normalsize
-
 The diffusivity function \(D(\mathcal{E})\) is given in a few forms:
 \small
 
@@ -174,29 +176,9 @@ Generalized versions for boundary conditions at the plasma edge
 \ldots{}towards the core (\(x=L\)): \small
 
 \begin{align}
-    \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~,
-        ~~~~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~,
+    \Gamma(L) \,=\, \Gamma_c ~\longrightarrow~ \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~;
+        ~~~~ q(L) \,=\, q_c ~\longrightarrow~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~;
         ~~~~\frac{\partial Z}{\partial x} \,=\, 0
-\end{align}
-
-\normalsize
-
-For Matlab, the Neumann and Robin boundary conditions can be expressed
-in the form of \small
-
-\begin{align}
-    &p\left(x, t, \mathbf{v}\right) \,+\, F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,=\, 0 ~~~ \text{for} ~~~ (x, t) \in \delta\Omega \\
-&p(0, t) \,=\, -\begin{bmatrix}
-                D \, \dfrac{n}{\lambda_n}\\[2ex]
-                \dfrac{D}{\zeta} \, \dfrac{T}{\lambda_T} \\[2ex]
-                \dfrac{\mu D}{\epsilon} \, \dfrac{Z}{\lambda_Z}
-                \end{bmatrix}_{x = 0}
-~~ \text{and} ~~
-p(L, t) \,=\, \begin{bmatrix}
-                \Gamma_c(t) \\[1ex]
-                \dfrac{(\gamma - 1) q_c - T\Gamma_c(t)}{n} \\[2ex]
-                0
-                \end{bmatrix}_{x=L}~.
 \end{align}
 
 \normalsize
@@ -243,7 +225,6 @@ Steady-State Solutions \small
 \normalsize
 
 \begin{itemize}
-\tightlist
 \item
   Electron Anomalous Diffusion: \small
 
@@ -261,17 +242,20 @@ Steady-State Solutions \small
 
   \normalsize
 \item
-  Ion Bulk Viscosity:
-  \(N \,=\, \dfrac{\nu_{*i}\,\epsilon^{3/2}\,\nu_{ei}}{\nu_{ii}} ~~~\text{and}~~~ \eta \,=\, \dfrac{\epsilon^2 \sqrt{\pi}}{8 a_m} m_i \,n\, (v_{T_i})^2\)
-  \small
+  Ion Bulk Viscosity: 
+\end{itemize}
 
-  \begin{align}
-  \begin{bmatrix}\xi_\theta \\[1ex] \xi_\phi \end{bmatrix} \,&=\, \dfrac{1}{\pi} \int_0^{\sqrt{\nu_{*i}}} \begin{bmatrix} 1 \\[1ex] \frac{5}{2} - x \end{bmatrix} x^2 \exp(-x) \, \tan^{-1}\left(\dfrac{2 N \sqrt{x}}{N^2 + Z^2 - x}\right) \text{d}x \\
-  g_n^{\pi\parallel} \,=\, \eta \, \rho_{\theta i}& B_\theta \, \xi_\theta~,~~~~ g_n^{\pi\parallel} \,=\, \eta \, \rho_{\theta i} \left(B_\theta\,\xi_\theta - B\,\xi_\phi\right)~,~~~~ g_Z^{\pi\parallel} \,=\, 2\eta \, B_\theta \, \xi_\theta \\
-  e \Gamma_i^{\pi\parallel} \,&=\, -\frac{e n_e D_p}{\rho_i} (-\lambda - Z) \, \text{Im}\left[X\left(Z + \frac{i \nu_{ii}}{\omega_t}\right)\right]
-  \end{align}
+\small
 
-  \normalsize
+\begin{align}
+    D^{\pi\parallel} \,&=\, \frac{\epsilon^2 \, \rho_{\theta i} \, T}{(a_m - x) \, B \, \sqrt{\pi}} \\
+    e \Gamma_i^{\pi\parallel} \,&=\, -e n_e D^{\pi\parallel} \left(-\frac{n^\prime}{n} - \frac{Z}{\rho_{\theta i}}\right) \, \text{Im}\left[X\left(Z + \frac{i \nu_{ii}}{\omega_t}\right)\right]
+\end{align}
+
+\normalsize
+
+\begin{itemize}
+\tightlist
 \item
   Ion Orbit Loss: \small
 
