Broke up old intro; no sig edits made yet

--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -1,4 +1,4 @@
-\chapter{Model}\label{chapter:model}
+\chapter{Dynamical Model}\label{chapter:dynamical_model}
 Fusion plasmas are inherently complicated systems, and thus are complicated to model, even when taking simplification liberties.
 The model developed by Itoh \emph{et al.} \cite{itoh_edge_1991} and Zohm \cite{zohm_dynamic_1994}, and later refined by others, assumes that the transport barrier occurs in a thin layer at the plasma edge.
 The plasma edge is defined to be at the last-closed flux surface (separatrix).
