Added the proper secs; proper file path for code

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -120,17 +120,25 @@
 \pagenumbering{arabic}
 \input{Introduction/Introduction.tex}
 
+\clearemptydoublepage
+
+\input{Physics_Bifurcation/Physics_Bifurcation.tex}
 
 \clearemptydoublepage
 
-
-\input{Model/Model.tex}
-
+\input{Dynamical_Model/Dynamical_Model.tex}
 
 \clearemptydoublepage
 
-\chapter{Method}\label{chapter:method}
+\input{Numerical_Method/Numerical_Method.tex}
 
+\clearemptydoublepage
+
+\input{Results/Results.tex}
+
+\clearemptydoublepage
+
+\input{Conclusion/Conclusion.tex}
 
 \clearemptydoublepage
 
